[package]
name = "scooter-hx-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "scooter_hx"
crate-type = ["cdylib"]

[dependencies]
steel-core = { git = "https://github.com/mattwparas/steel.git", version = "0.7.0", features = [
  "dylibs",
  "sync",
] }
steel-derive = { version = "0.6.0" }

abi_stable = "0.11.1"
frep-core = "0.1.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ignore = "0.4.23"
